# FIDELITY-Fine-grained-Interpretable-Distillation-for-Effective-Language-Insights-and-Topic-Yielding

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  verify_pipeline.py
fidelity/: __init__.py  clusterer.py  dimension_reducer.py  fidelity_module.py  label_generator.py
fidelity.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_clusterer.py  test_dimension_reducer.py  test_embedder.py  test_keyword_extractor.py  test_label_generator.py
topic_pipeline/: embedder.py  fidelity_module.py  keyword_extractor.py  label_generator.py
